# Osprey

./: CMakeLists.txt  CircularBuffer.h  FFTProcessor.cpp  FFTProcessor.h  Makefile  README.md  SDRDevice.h  SDRFactory.cpp  SDRFactory.h  SignalGui.cpp  SignalGui.h  SimulationDevice.cpp  Spectro3D.cpp  Spectro3D.h  TestHAL.cpp  TestUsrpController.cpp  USRPDevice.cpp  USRPDevice.h  UsrpController.cpp  UsrpController.h  array2d.cpp  array2d.hpp  camera.cpp  frame_buffer.cpp  frame_buffer.hpp  gpuSigClass.md  gpuSpectrogram.py  grid.cpp  grid.hpp  main.cpp  multiAntenna.html  shader.hpp  spectrogram.py  theme.h  timeFreqPhase.html  todo.md  waterfall.fs
docs/: amr.md  b210.md  implementation_ideas.md  ml.md  plan.md
shaders/: waterfall.vs
src/: CircularBuffer.h  FFTProcessor.cpp  FFTProcessor.h  STFTSpectrogram.cpp  STFTSpectrogram.h  SignalGui.cpp  SimulationDevice.h  Spectro3D.cpp  TestCircularBuffer.cpp  UsrpController.cpp  camera.hpp  shader.cpp
torchsig/: main.py  model_only.py  wideband_detector_example.ipynb
